# Trufas_Projeto

./: db.sqlite3  pyproject.toml
config/: settings.py
trufas/: admin.py  apps.py  models.py
trufas/migrations/: 0001_initial.py  0002_sabor.py  0003_rename_sabor_sabores.py  0004_rename_sabores_sabore.py  0005_rename_sabore_sabor.py
