[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]

[project]
name = "trufas"
version = "3.10"
description = ""
authors = [
    {name = "leticia", email = "leticiaborgess.oficial@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
